--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landing-page",
+  "name": "landing-trial",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.14",
-    "next": "14.2.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "framer-motion": "^11.11.15",
+    "next": "^14.2.4",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
@@ -21,7 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.1",
